--- a/style.css
+++ b/style.css
@@ -73,12 +73,12 @@ button:disabled{
 
 p {
   position: absolute;
-  bottom: 5px;
+  bottom: 5%;
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   color: white;
   text-align: center;
-  justify-content: center;
   margin: 0 auto;
+  text-shadow: 2px 2px 10px;
 }
 
 /* Media query tablettes et smartphones */
@@ -97,7 +97,6 @@ p {
   button{
     position: relative;
     top: 15%;
-    font-size: 14px;
   }
 }
 
